--- a/figuras.html
+++ b/figuras.html
@@ -30,6 +30,18 @@
             Calcular el área
         </button>
     </form>
+    <h2>
+        Calcula la altura del triangulo
+    </h2>
+    <form>
+        <label for="InputTriangulo">
+            Escribe cuanto mide cada lado de tu cuadrado
+        </label>
+        <input id="InputTriangulo" />
+        <button type="button" onclick="calcularAlturaTriangulo()">
+            Calcular la altura 
+        
+    </form>
 
 </section>
    
